add stored model parameters

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 
-.ipynb_checkpoints/Word2Vec_Workshop_R_Version-checkpoint.ipynb
-resources/word2vec.ECCO-TCP.txt
-resources/word2vec.txtlab_Novel150_English.txt
+.ipynb_checkpoints
